--- a/instituto-fundador-bio-single.html
+++ b/instituto-fundador-bio-single.html
@@ -453,7 +453,8 @@
                 <li class="breadcrumb-item"><a href="index.html">HOME</a></li>
                 <li class="breadcrumb-item"><a href="instituto-marista.html">INSTITUTO MARISTA</a></li>
                 <li class="breadcrumb-item"><a href="instituto-fundador.html">FUNDADOR</a></li>
-                <li class="breadcrumb-item active" aria-current="page">BIOGRAFIAS</li>
+                <li class="breadcrumb-item"><a href="instituto-fundador-bio.html">BIOGRAFIAS</a></li>
+                <li class="breadcrumb-item active" aria-current="page">SINGLE</li>
               </ol>
             </nav>
           </div>
@@ -483,71 +484,77 @@
         <div class="row">
           <div class="col-12">
             <div class="mc-institute__section">
-              <div class="mc-institute__history">
+              <article class="mc-single mc-institute__history">
                 <div class="row">
                   <div class="col-12">
-                    <h2 class="main-title main-title--space30">BIOGRAFIAS</h2>
+                    <h2 class="main-title main-title--space30">NASCIDO EM 1789</h2>
+                    <h3 class="main-subtitle main-subtitle--blue-dark main-subtitle--space30">
+                      Romance Histórico Gabriel Michel, fms - 2016
+                    </h3>
                   </div>
-                  <div class="col-12 col-md-6">
-                    <h3 class="main-subtitle main-subtitle--space30">EM PORTUGUÊS</h3>
-                    <div class="mc-default__card mc-default__card--v3 mc-default__card--bg">
-                      <div class="mc-default__header"><span class="title">Nascido em 1789</span></div>
-                      <div class="mc-default__body">
-                        <p>Gabriel Michel, fms | Romance Histórico, 2016</p>
+                  <div class="col-12 col-sm-6 col-lg-8">
+                    <p>A União Marista do Brasil, por meio da sua Comissão de Espiritualidade e Patrimônio, apresenta ao
+                      público brasileiro a
+                      publicação de mais uma obra relevante da literatura marista. Trata-se do Romance Histórico –
+                      Nascido em 1789, de autoria
+                      do Ir. Gabriel Michel. O livro divide-se em três volumes, nele o pesquisador Irmão Michel
+                      reescreve num estilo de
+                      romance a vida de São Marcelino Champagnat, partindo justamente da sua infância, período pouco
+                      documentado da vida do
+                      Fundador.</p>
+                    <p>Na apresentação da edição aos leitores brasileiros realizada pelo Ir. Ivo Antônio Strobino,
+                      pesquisador do
+                      Memorial Marista, podemos ler:</p>
+                    <p>“Nascido em 1789” é a versão do original francês publicado com o título “Né en 1789”.
+                      Nesta edição brasileira foi acrescentado o subtítulo “Vida de São Marcelino Champagnat”, para
+                      caracterizar melhor o
+                      tema. Está subdivido em três volumes e aborda as faces sucessivas da vida e das realizações de
+                      Marcelino Champagnat. Os
+                      capítulos são curtos, de leitura fácil e envolvente” (p.10).</p>
+                    <p>A ideia original do título, bem como da sua publicação
+                      nasceu em torno das comemorações do bicentenário de nascimento de São Marcelino Champagnat:
+                      1789-1989. O primeiro volume
+                      da obra, traz um panorama bastante completo da situação política e religiosa da época do
+                      nascimento de Marcelino. O
+                      segundo volume aborda a “fase de La Valla”, o nascimento do Instituto e seu desenvolvimento. O
+                      terceiro e último volume
+                      aprofunda a fase de l’Hermitage, neles, segundo Ir. Ivo Strobino, “temos lindos episódios da vida
+                      e da personalidade de
+                      Marcelino Champagnat: a organização da vida religiosa dos Irmãos, o sucesso das primeiras escolas,
+                      a expansão pelas
+                      outras dioceses; a grande confiança em Maria…, seu testamento espiritual” (p.13).</p>
+                    <div class="mc-single__share"><span>COMPARTILHE:</span></div>
+                    <div class="mc-single__nav">
+                      <div class="mc-single__nav-l">
+                        <div class="mc-single__body">
+                          <p>Lorem ipsum dolor consect</p>
+                        </div><a href="" class="mc-single__link"><i class="fa fa-long-arrow-left"></i>VOLTAR</a>
                       </div>
-                      <div class="mc-default__footer">
-                        <ul>
-                          <li><a href="instituto-fundador-bio-single.html">Inglês</a></li>
-                          <li><a href="instituto-fundador-bio-single.html">Espanhol</a></li>
-                          <li><a href="instituto-fundador-bio-single.html">Francês</a></li>
-                        </ul>
-                      </div>
-                    </div>
-                    <div class="mc-default__card mc-default__card--v3 mc-default__card--bg">
-                      <div class="mc-default__header"><span class="title">Nascido em 1789</span></div>
-                      <div class="mc-default__body">
-                        <p>Gabriel Michel, fms | Romance Histórico, 2016</p>
-                      </div>
-                      <div class="mc-default__footer">
-                        <ul>
-                          <li><a href="">Inglês</a></li>
-                          <li><a href="">Espanhol</a></li>
-                          <li><a href="">Francês</a></li>
-                        </ul>
+                      <div class="mc-single__nav-r">
+                        <div class="mc-single__body">
+                          <p>Lorem ipsum dolor consect</p>
+                        </div><a href="" class="mc-single__link">AVANÇAR<i class="fa fa-long-arrow-right"></i></a>
                       </div>
                     </div>
                   </div>
-                  <div class="col-12 col-md-6">
-                    <h3 class="main-subtitle main-subtitle--space30">EM OUTRAS LÍNGUAS</h3>
-                    <div class="mc-default__card mc-default__card--v3 mc-default__card--bg">
-                      <div class="mc-default__header"><span class="title">Nascido em 1789</span></div>
-                      <div class="mc-default__body">
-                        <p>Gabriel Michel, fms | Romance Histórico, 2016</p>
-                      </div>
-                      <div class="mc-default__footer">
-                        <ul>
-                          <li><a href="">Inglês</a></li>
-                          <li><a href="">Espanhol</a></li>
-                          <li><a href="">Francês</a></li>
-                        </ul>
-                      </div>
+                  <div class="col-12 col-sm-6 col-lg-4">
+                    <div class="mc-single__image">
+                      <img src="https://via.placeholder.com/347x438" alt="">
                     </div>
-                    <div class="mc-default__card mc-default__card--v3 mc-default__card--bg">
-                      <div class="mc-default__header"><span class="title">Nascido em 1789</span></div>
-                      <div class="mc-default__body">
-                        <p>Gabriel Michel, fms | Romance Histórico, 2016</p>
-                      </div>
-                      <div class="mc-default__footer">
-                        <ul>
-                          <li><a href="">Inglês</a></li>
-                          <li><a href="">Espanhol</a></li>
-                          <li><a href="">Francês</a></li>
-                        </ul>
-                      </div>
+                    <a href="" class="mc-single__download">DOWNLOAD PDF</a>
+                  </div>
+                  <div class="col-12">
+                    <div class="mc-single__author">
+                      <h2 class="main-title main-title--size20 main-title--space30">SOBRE O AUTOR</h2>
+                      <p>Irmão Gabriel Michel (1920-2008) nasceu em localidade próxima de Saint-Etienne, França. Era natural, portanto de região
+                      pertencente à área geográfica dos inicios do Instituto Marista, o que lhe valeu o privilégio de conhecer bem os
+                      diferentes lugares percorridos pelo Fundador e pelos primeiros Irmãos. Foi um dos pioneiros na pesquisa do patrimônio
+                      espiritual marista, juntamente com os Irmãos Pierre Zind, Alexandre Balko, Paul Sester, Aureliano Brambila e André
+                      Lanfrey.</p>
                     </div>
                   </div>
                 </div>
-              </div>
+              </article>
             </div> <!-- end -->
           </div>
         </div>
